--- a/gradle.properties
+++ b/gradle.properties
@@ -9,5 +9,5 @@ loader_version=0.12.12
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=me.wurgo
+maven_group=me.quesia
 archives_base_name=peepopractice
