--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,21 @@ loom {
 	accessWidenerPath = file("src/main/resources/peepopractice.accesswidener")
 }
 
+configurations {
+	modIncludeImplementation
+
+	include.extendsFrom modIncludeImplementation
+	modImplementation.extendsFrom modIncludeImplementation
+}
+
 dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "com.github.RedLime:SpeedRunIGT:${project.minecraft_version}-SNAPSHOT"
+	modIncludeImplementation(fabricApi.module("fabric-api-base", project.fabric_version))
+	modIncludeImplementation(fabricApi.module("fabric-resource-loader-v0", project.fabric_version))
 }
 
 processResources {
@@ -47,7 +56,6 @@ java {
 }
 
 jar {
-	exclude "**/Log4j2Plugins.dat"
 	from("LICENSE") {
 		rename { "${it}_${project.archivesBaseName}"}
 	}
@@ -55,6 +63,18 @@ jar {
 
 // configure the maven publication
 publishing {
+	publications {
+		mavenJava(MavenPublication) {
+			// add all the jars that should be included when publishing to maven
+			artifact(remapJar) {
+				builtBy remapJar
+			}
+			artifact(sourcesJar) {
+				builtBy remapSourcesJar
+			}
+		}
+	}
+
 	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
 	repositories {
 		// Add repositories to publish to here.
