--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,11 @@ org.gradle.jvmargs=-Xmx2G
 # check these on https://fabricmc.net/develop
 minecraft_version=1.16.1
 yarn_mappings=1.16.1+build.21
-loader_version=0.12.12
+loader_version=0.14.13
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=0.1
 maven_group=me.quesia
 archives_base_name=peepopractice
+
+fabric_version=0.18.0+build.387-1.16.1
