--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.16.1+build.21
 loader_version=0.14.13
 
 # Mod Properties
-mod_version=1.5-kruin7
+mod_version=1.5-beta.1
 maven_group=me.quesia
 archives_base_name=peepopractice
 
