--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	modImplementation "com.github.RedLime:SpeedRunIGT:${project.minecraft_version}-SNAPSHOT"
 	modIncludeImplementation(fabricApi.module("fabric-api-base", project.fabric_version))
 	modIncludeImplementation(fabricApi.module("fabric-resource-loader-v0", project.fabric_version))
+	modIncludeImplementation(fabricApi.module("fabric-item-api-v1", project.fabric_version))
 	modCompileOnlyApi files("lib/atum-1.1.3+1.16.1.jar", "lib/standardsettings-1.2.2+1.16.1.jar")
 	include annotationProcessor(implementation("com.github.LlamaLad7:MixinExtras:${project.mixinextras_version}"))
 }
