--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.16.1+build.21
 loader_version=0.14.13
 
 # Mod Properties
-mod_version=1.8
+mod_version=1.8b
 maven_group=me.falu
 archives_base_name=peepopractice
 
