--- a/gradle.properties
+++ b/gradle.properties
@@ -5,13 +5,12 @@ org.gradle.jvmargs=-Xmx2G
 # check these on https://fabricmc.net/develop
 minecraft_version=1.16.1
 yarn_mappings=1.16.1+build.21
-loader_version=0.14.13
+loader_version=0.15.7
 
 # Mod Properties
 mod_version=2.1-pre1
 maven_group=me.falu
 archives_base_name=peepopractice
 
-# API
+# API Properties
 fabric_version=0.18.0+build.387-1.16.1
-mixinextras_version=0.2.0-beta.4
