--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.16.1+build.21
 loader_version=0.15.7
 
 # Mod Properties
-mod_version=2.2-pre4
+mod_version=2.2
 maven_group=me.falu
 archives_base_name=peepopractice
 
