--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
-# check these on https://fabricmc.net/develop
+# Check these on https://fabricmc.net/develop, https://github.com/RedLime/yarn/tags
 minecraft_version=1.16.1
-yarn_mappings=1.16.1+build.21
-loader_version=0.15.7
+yarn_mappings=1.16.1.build.19
+loader_version=0.16.13
 
 # Mod Properties
 mod_version=2.2.1
